--- a/talk/talk.tex
+++ b/talk/talk.tex
@@ -138,7 +138,8 @@
 
 %\def\PZc{\mathrm I\!\Pi\uz}
 \def\PZc{\leftrightshading{$\mathrm I\!\Pi\uz$}{blue}{red}}
-\def\PNc{\PN}
+%\def\PNc{\PN}
+\def\PNc{\leftrightshading{$\mathrm I\!\Pi\un$}{blue}{red}}
 
 
 \title[Bayesian Inference with Sets of Conjugate Priors]
@@ -617,7 +618,7 @@ p(\psib\mid\nng,\ynr) %\hspace*{2ex}
 \end{block}
 
 \begin{example}
-\begin{tabular}{r|rcl}
+\begin{tabular}{r|lcl}
 Data :           & $\vec{x}\mid\mu$   & $\sim$ & $\norm(\mu,\sigma_0^2)$ \quad ($\sigma_0^2$ known)\\[0.5ex]
 conjugate prior: & $\mu\mid\nzg,\yzr$ & $\sim$ & $\norm(\yzr, 1/\nzg)$  \\[0.5ex]
 \cline{1-4}
@@ -628,9 +629,57 @@ posterior:       & $\mu\mid\nng,\ynr$ & $\sim$ & $\norm(\ynr, 1/\nng)$ \quad ($\
 
 
 
-\subsection{Sets of Conjugate Priors}
+\subsection{Sets of Priors}
 
+\frame{\frametitle{Generalised Bayesian Inference with Sets of Priors}
 
-\section{Parameter Set Shapes}
+\begin{block}{Set of Priors}
+\vspace*{-1ex}
+\begin{align*}
+\MZ &= \text{conv}\big(\big\{p(\psib\mid\nzg,\byzr) \colon (\nzg,\byzr) \in \PZc\big\}\big)\vspace*{-0.5ex}%
+\end{align*}
+
+%Model for prior information =
+Finite convex mixtures of canonical conjugate priors defined by $\PZc$\\
+Convex set of probability distributions ensures \emph{coherence} {\small(Walley 1991)}\\
+of inference procedure (as in standard Bayesian inference)
+\end{block}
+
+\begin{block}{Set of Posteriors}
+\vspace*{-1ex}
+\begin{align*}
+\MN &= \text{conv}\big(\big\{p(\psib\mid\nng,\bynr) \colon (\nng,\bynr) \in \PNc\big\}\big)\vspace*{-0.5ex}%
+\end{align*}
+
+where $\PNc = \big\{(\nng,\bynr) \colon (\nzg,\byzr) \in \PZc \big\}$.\\
+%Set of posteriors = 
+Finite convex mixtures of canonical conjugate posteriors\\ defined by set of updated parameters $\PNc$
+\end{block}
+
+}
+
+\frame{\frametitle{Generalised Bayesian Inference with Sets of Priors}
+
+Parameter set $\PZc$ defines set of priors
+
+Bounds for quantities being linear in $p(\psib\mid\nng,\bynr)$\\
+(expectations $\E[g(\psib)\mid\nng,\bynr]$, \ldots)
+are attained at canonical conjugate posteriors and thus \alert{straighforward to calculate}
+
+}
+
+\subsection{Parameter Set Shapes}
+
+\frame{\frametitle{Parameter Set Shapes}
+
+\begin{itemize}
+\item Parameter set $\PZc$ defines set of priors\
+\item Shape of $\PZc$ influences model behaviour
+\end{itemize}
+
+}
+
+\section{Prior-Data Conflict}
+
 
 \end{document}
