diss: change to scrbook

--- a/diss.tex
+++ b/diss.tex
@@ -8,7 +8,7 @@
 %%         & Sigmund Stintzing         %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[12pt]{book}
+\documentclass[12pt]{scrbook}
 
 \input{head}
 \input{defs}
